--- a/LoginPage/index.html
+++ b/LoginPage/index.html
@@ -27,9 +27,14 @@
             <form action="">
                 <input type="text" name="" id="" placeholder="&nbsp;        Username or Email">
                 <input type="password" placeholder="&nbsp;      Password">
-                <a href="" class="forgot-password"> 
-                Forgot Password ?
-                </a>
+                <div style="display: block;">
+                    <a href="" class="sign-up"> 
+                        Sign Up ?
+                        </a>
+                    <a href="" class="forgot-password"> 
+                    Forgot Password ?
+                    </a>
+                </div>
                 <a href="#" class="login"> <span class="login-btn">Login</span></a>
                 <p class="or">
                     OR
