--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1> Javascript Playground</h1>
-    <script src="day6..js"></script>
+    <script src="day7.js"></script>
 </body>
 </html>
