--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> Javascript Playground</h1>
-    <script src="day7.js"></script>
+
+<script src="assignementSeven.js"></script>
 </body>
-</html>
+</html> 
