--- a/js/index.html
+++ b/js/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1> Javascript Playground</h1>
 
-<script src="assignementSeven.js"></script>
+<script src="day8.js"></script>
 </body>
 </html> 
