--- a/js/index.html
+++ b/js/index.html
@@ -10,6 +10,6 @@
     <h1>Javascript Playground</h1>
 
     <!-- <script src="day8.js"></script> -->
-    <script src="assignmentEight.js"></script>
+    <script src="day10.js"></script>
   </body>
 </html>
