--- a/js/index.html
+++ b/js/index.html
@@ -7,7 +7,13 @@
     <title>Javascript</title>
   </head>
   <body>
-    <h1>Javascript Playground</h1>
+    <h1 id="header">Javascript Playground</h1>
+  <div class="parent">
+    <ul id="myFood">
+      <li>Pizza</li>
+      <li>Momo</li>
+    </ul>
+  </div>
 
     <!-- <script src="day8.js"></script> -->
     <script src="day10.js"></script>
