--- a/js/index.html
+++ b/js/index.html
@@ -14,8 +14,9 @@
       <li>Momo</li>
     </ul>
   </div>
-
+    <input type="text">
+    <button onclick="clickTest()"> Click ME </button>
     <!-- <script src="day8.js"></script> -->
-    <script src="day10.js"></script>
+    <script src="day11.js"></script>
   </body>
 </html>
