--- a/js/day12/index.html
+++ b/js/day12/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button>Click ME</button>
+    <button>Get Data</button>
+    <div id="getquotahere"></div>
 
     <script src="day12.js"></script>
 </body>
